Fixed issue where selection an expression would sometimes make it 'jump'

--- a/css/mathlive.less
+++ b/css/mathlive.less
@@ -461,12 +461,10 @@
         background: #b4d5fe !important;
         color: HighlightText;
         border-color: HighlightText;
-        display: inline-block;
     }
 
     &.ML__blurred .ML__selected {
         background: #ccc;
-        display: inline-block;
     }
 
 
